[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ComfyHelper"
version = "0.0.1"
authors = [
  { name="primitive", email="primitivefinance101@gmail.com" },
]
description = "A library to help with ComfyUI integration"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "websocket-client",
    "ollama",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]